resources/sass/calendar/inputs.scss
/* ... */
.spacey_separator{
    margin:10px 0 15px 0;
}

.wrap-collapsible{
    width: 100%;

}

@media screen and (max-width: 768px) {
    #input_container {
        width: 100vw;
        max-width: initial;
    }
    #calendar_container:not(.inputs_collapsed) {
        width: 0;
        flex-grow: 0;
        padding: 0;
    }
}

.wrap-collapsible.detail-row{
    width:100%;
}

.wrap-collapsible > input[type='checkbox']{
    display: none;
}

.title-text{
    font-weight: bold;
    font-size: 2rem;
    line-height: 4rem;
}

.lbl-text{
    font-weight: bold;
    font-size: 1.1rem;
}

.lbl-toggle {
    display: block;
    user-select: none;
    margin:0;
    cursor: pointer;

    &:hover {
        background-color: rgba(0, 0, 0, 0.06);
    }
}

.lbl-toggle:hover .wiki, .setting:hover .setting-question{
    display:inline;
}

.lbl-toggle.disabled::before{
    display:none;
}

.wiki, .setting-question{
    display: none;
    float: right;
    color: #adb5bd;
    text-decoration: none; /* no underline */
}

.wiki:hover, .setting-question:hover{
    color: black;
    text-decoration: none; /* no underline */
}

.collapsible-content {
    width:100%;
    max-height: 0;
    overflow: hidden;
}

.toggle:checked + .lbl-toggle + .collapsible-content {
    max-height: 100%;
    padding: 1.25rem;
}

.toggle:checked + .lbl-toggle {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

.collapsible-content .content-inner {
    background: rgba(250, 224, 66, .2);
    border-bottom: 1px solid rgba(250, 224, 66, .45);
    border-bottom-left-radius: 7px;
    border-bottom-right-radius: 7px;
    padding: .5rem 1rem;
}

.custom-checkbox {
    min-height: 1rem;
    padding-left: 0;
    margin-right: 0;
    cursor: pointer;
    margin-top:3px;
}
.custom-checkbox .custom-control-indicator {
    content: "";
    display: inline-block;
    position: relative;
    width: 30px;
    height: 10px;
    background-color: #818181;
    border-radius: 15px;
    -webkit-transition: background .0s ease;
    transition: background .0s ease;
    vertical-align: middle;
    margin: 0 16px;
    box-shadow: none;
}
.custom-checkbox .custom-control-indicator:after {
    content: "";
    position: absolute;
    display: inline-block;
    width: 18px;
    height: 18px;
    background-color: #f1f1f1;
    border-radius: 21px;
    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4);
    left: -2px;
    top: -4px;
    -webkit-transition: left .0s ease, background .0s ease, box-shadow .1s ease;
    transition: left .0s ease, background .0s ease, box-shadow .1s ease;
}
.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator {
    background-color: #818181;
    background-image: none;
    box-shadow: none !important;
}
.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator:after {
    background-color: #84c7c1;
    left: 15px;
}
.custom-checkbox .custom-control-input:focus ~ .custom-control-indicator {
    box-shadow: none !important;
}

/* ------------------ Event forms ----------------- */

#event_comment_mastercontainer .trumbowyg{
    height: 150px;
    max-height: 150px;
    min-height: 150px;
}

#event_comments.loading{
    background-image: url('/resources/icons/loader_black.png');
    height:35px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

#event_comments.empty{
    font-style: italic;
}

#event_comments{
    display: flex;
    flex-direction: column;
    width:100%;
}

.event_comment{
    margin-bottom:0.5em;
    padding: 1rem;
    border: 1px solid $calendar-border-color;
}

.event_comment.calendar_owner .username{
    font-weight:800;
}

.event_comment.comment_owner{
    background-color: #fffbd3;
}

.event_comment:last-child{
    margin-bottom:0;
}

.event_comment p:first-child{
    margin-bottom:0.5em;
}

.event_comment p{
    margin: 0;
    padding: 0;
    line-height: 1.2rem;
    font-size: 1.1rem;
}

.event_comment .username{
    font-style: italic;
    font-size:0.75em;
}

.event_comment .date{
    font-style: italic;
    color: rgba(0,0,0,.5);
    font-size: .7rem;
}




.event-basic-wrapper{
    margin-top: 40px;
    margin-bottom: 40px;
}

.clickable_background{
    position: fixed;
    top: 0;
    bottom: 0;
    background-color:rgba(75, 75, 75, 0.75);
    width: 100%;
    height:100%;
    z-index:1000;
    overflow-y:scroll;
}

.event-wrapper {
    position:relative;
    max-width: 40vw;
    min-width: 650px;
    padding: 15px 35px 45px;
    margin: 0 auto;
    background-color: #fff;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius:7px;
}


.close-ui-btn-bg{
    position:absolute;
    right: -20px;
    top: -16.5px;
    width:60px;
    height:60px;
    border-radius: 30px;
    background-color: white;
}

.close_ui_btn{
    position:absolute;
    right: -12px;
    top: -12px;
    font-size: 50px;
    color:#E53935;
    cursor: pointer;
}

.close_ui_btn:hover{
    color:#B71C1C;
}

@media screen and (max-width: 768px) {
    .clickable_background {
        width: auto;
    }

    .event-basic-wrapper {
        margin: 0;
    }

    .close-ui-btn-bg {
        top: 0;
        right: 0;
        border-radius: 0;
        background-color: transparent;
    }

    .close_ui_btn {
        top: 4.5px;
        right: 6px;
    }

    .event-wrapper {
        position:relative;
        max-width: 100vw;
        min-width: 100vw;
        padding: 0.5rem;
        margin: 0 auto;
        background-color: #fff;
        border: none;

        .form-control {
            height: auto;
        }
    }
}

.event-form-heading{
    margin-top:10px;
}

.event_desc.editable{
    height:100px;
}

.event_desc > :last-child { margin-bottom: 0 !important; margin-right: 0 !important; }

ol{
    padding-inline-start:0;
    margin-block-end:0;
}

li{
    list-style-type: none;
}


ol.example li.placeholder {
    position: relative;
}

ol.example li.placeholder:before {
    position: absolute;
}
/* ... */

